# dcm-agent

./: .cov_build.sh.swo  CHANGELOG.md  HLD.md  Makefile.am  NOTICE  README.md  archive_manager.c  backup_logs_migration_HLD.md  build.sh  cleanup_handler.c  configure.ac  context_manager.c  cov_build.sh  dcm.c  dcm.h  dcm_cronparse.c  dcm_cronparse.h  dcm_parseconf.c  dcm_parseconf.h  dcm_rbus.c  dcm_rbus.h  dcm_schedjob.c  dcm_schedjob.h  dcm_types.h  dcm_utils.c  dcm_utils.h  dcmd.service  file_operations.c  logup.md  logupload_HLD.md  retry_logic.c  strategy_dcm.c  strategy_handler.c  unit_test.sh  uploadstblogs.c
backup_logs/: Makefile.am  backup_logs_LLD.md  backup_logs_migration_HLD.md  backup_logs_requirements.md
backup_logs/diagrams/: backup_logs_flowcharts.md
backup_logs/docs/: backup_logs_LLD.md  backup_logs_migration_HLD.md  backup_logs_requirements.md  backuplogs.md
backup_logs/docs/diagrams/: backup_logs_flowcharts.md
backup_logs/include/: backup_engine.h  backup_logs.h  backup_types.h  backup_utils.h  config_manager.h  special_files.h  sys_integration.h
backup_logs/src/: backup_engine.c  backup_logs.c  backup_utils.c  config_manager.c  special_files.c  sys_integration.c
backup_logs/unittest/: Makefile.am  backup_engine_gtest.cpp  backup_logs_gtest.cpp  config_manager_gtest.cpp  configure.ac  special_files_gtest.cpp  sys_integration_gtest.cpp
backup_logs/unittest/mocks/: config_manager_mocks.h
logupload/: ConfigurationManager.h  Makefile.am  downloadUtil.h  logupload.cpp  loguploadHLD.md  loguploadLLD.md  rdkv_cdl_log_wrapper.c  rdkv_cdl_log_wrapper.h  upload.c
logupload/.deps/: logupload-rdkv_cdl_log_wrapper.Po  logupload-upload.Po
logupload/include/: archive_manager.h  cert_manager.h  cleanup_handler.h  cleanup_manager.h  context.h  context_manager.h  event_manager.h  file_operations.h  http_upload.h  logupload.h  mtls_cert_selector.h  path_handler.h  privacy_mode.h  rbus_interface.h  retry_logic.h  strategy_handler.h  strategy_selector.h  telemetry.h  upload_engine.h  uploadstblogs.h  uploadstblogs_types.h  validation.h  verification.h
logupload/src/: Makefile.am  archive_manager.c  cleanup_handler.c  cleanup_manager.c  context.c  context_init.c  context_manager.c  event_manager.c  file_operations.c  http_upload.c  log_collector.c  logupload_context.c  logupload_tr181.c  main.c  md5_utils.c  mtls_cert_selector.c  path_handler.c  privacy_mode.c  rbus_interface.c  retry_logic.c  strategy_dcm.c  strategy_handler.c  strategy_ondemand.c  strategy_reboot.c  strategy_selector.c  telemetry.c  test_context.c  test_mod.c  upload_engine.c  uploadstblogs.c  validation.c  verification.c
test/: run_l2.sh  (+1 more)
unittest/: Makefile.am  configure.ac  dcm_cronparse_gtest.cpp  dcm_gtest.cpp  dcm_parseconf_gtest.cpp  dcm_rbus_gtest.c  dcm_rbus_gtest.cpp  dcm_schedjob_gtest.cpp  dcm_utils_gtest.cpp  mockrbus.h
unittest/mocks/: mock.cpp  mockRbus.h  mockrbus.cpp  mockrbus.h
upload/: Makefile.am  main.c
uploadstblogs/: ARCHITECTURE.md  Makefile.am  README.md  test_path_handler.c
uploadstblogs/docs/: Hld.md  uploadlogsnow.md  uploadstblogs.md  usbUploadLOgs_migration_HLD.md
uploadstblogs/docs/diagrams/: uploadSTBLogs_sequence.md
uploadstblogs/docs/hld/: UploadLogsNow_Migration_HLD.md  uploadSTBLogs_HLD.md
uploadstblogs/docs/hld/diagrams/: uploadSTBLogs_flowcharts.md
uploadstblogs/docs/lld/: uploadSTBLogs_LLD.md
uploadstblogs/docs/requirements/: uploadSTBLogs_requirements.md
uploadstblogs/examples/: complete_upload_workflow.c  integration_example.c
uploadstblogs/include/: archive_manager.h  cert_manager.h  cleanup_handler.h  cleanup_manager.h  event_manager.h  file_operations.h  http_upload.h  log_collector.h  md5_utils.h  mtls_cert_selector.h  mtls_handler.h  oauth_handler.h  ocsp_validator.h  path_handler.h  retry_logic.h  strategy_handler.h  tls_handler.h  upload_engine.h  uploadlogsnow.h  uploadstblogs.h  uploadstblogs_types.h  verification.h
uploadstblogs/src/: Makefile.am  archive_manager.c  cleanup_handler.c  cleanup_manager.c  context_manager.c  event_manager.c  file_operations.c  http_upload.c  log_collector.c  md5_utils.c  mtls_cert_selector.c  mtls_handler.c  oauth_handler.c  ocsp_validator.c  path_handler.c  rbus_interface.c  retry_logic.c  strategies.c  strategy_dcm.c  strategy_handler.c  strategy_ondemand.c  strategy_reboot.c  strategy_selector.c  strategy_selector_gtest.cpp  test_env_print.c  tls_handler.c  upload_engine.c  uploadlogsnow.c  uploadstblogs.c  validation.c  verification.c
uploadstblogs/tests/: test_cleanup_handler.c  test_enhanced_upload.c
uploadstblogs/unittest/: Makefile.am  RETRY_LOGIC_TEST_README.md  archive_manager_gtest.cpp  cleanup_handler_gtest.cpp  cleanup_manager_gtest.cpp  configure.ac  context_manager_gtest.cpp  event_manager_gtest.cpp  log_collector_gtest.cpp  md5_utils_gtest.cpp  path_handler_gtest.cpp  rbus_interface_gtest.cpp  retry_logic_gtest.cpp  run_retry_logic_test.sh  strategies_gtest.cpp  strategy_dcm_gtest.cpp  strategy_handler_gtest.cpp  strategy_ondemand_gtest.cpp  strategy_selector_gtest.cpp  telemetry_gtest.cpp  upload_engine_gtest.cpp  uploadlogsnow_gtest.cpp  uploadstblogs_gtest.cpp  validation_gtest.cpp  verification_gtest.cpp
uploadstblogs/unittest/mocks/: mock_curl.cpp  mock_curl.h  mock_file_operations.cpp  mock_file_operations.h  mock_rbus.cpp  mock_rbus.h  mock_rdk_utils.cpp  mock_rdk_utils.h
usbLogUpload/: Makefile  Makefile.am  README.md  build.sh  configure.ac
usbLogUpload/docs/: shared-functions-analysis.md  usb-log-upload-flowcharts.md  usb-log-upload-hld.md  usb-log-upload-requirements.md  usblogupload.md
usbLogUpload/include/: usb_log_archive.h  usb_log_file_manager.h  usb_log_main.h  usb_log_utils.h  usb_log_validation.h
usbLogUpload/src/: usb_log_archive.c  usb_log_file_manager.c  usb_log_main.c  usb_log_utils.c  usb_log_validation.c
usbLogUpload/src/test/: test_main.c
usbLogUpload/unittest/: Makefile.am  configure.ac  usb_log_archive_gtest.cpp  usb_log_file_manager_gtest.cpp  usb_log_main_gtest.cpp  usb_log_utils_gtest.cpp  usb_log_validation_gtest.cpp
(+52 files in other folders)
